fixing line height on smaller screens

--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -187,6 +187,7 @@
 @media screen and (max-width: 400px) {
 .top-header {
   font-size: 3rem;
+  line-height: 3rem;
 }
 }
 @media only screen and (max-device-width: 800px) {
